--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,17 @@
         "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": ["es6", "es2015", "dom"],
+        "lib": [
+            "es6",
+            "es2015",
+            "dom"
+        ],
         "sourceMap": false,
         "pretty": true,
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
         "allowJs": false, // cannot be true when decleration is true
         "noImplicitAny": false,
-        "suppressImplicitAnyIndexErrors": true,
         "noImplicitReturns": true,
         "noImplicitUseStrict": false,
         "noFallthroughCasesInSwitch": true,
